MDEV-34502 InnoDB debug mode build - asserts with Valgrind

- Retain the problematic assert for memory sanitizer build.